# Deep_Research_Using_CrewAI_Bedrock_AgentCore

./: .gitignore  Dockerfile  README.md  lambda_function.py  pyproject.toml  requirements.txt  streamlit.py
src/deep_research/: crew.py  main.py
src/deep_research/config/: agents.yaml  tasks.yaml
