[project]
name = "deep_research"
version = "0.1.0"
description = "deep_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.38.7",
    "crewai[tools]>=0.114.0,<1.0.0",
    "exa-py>=2.0.2",
    "streamlit>=1.50.0",
]

[project.scripts]
deep_research = "deep_research.main:run"
run_crew = "deep_research.main:run"
train = "deep_research.main:train"
replay = "deep_research.main:replay"
test = "deep_research.main:test"
run_with_trigger = "deep_research.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
